# Neural-Network-Graph-Compiler

./: .gitignore  CMakeLists.txt  README.md  standalone_demo.cpp
include/nnc/Analysis/: CMakeLists.txt  GraphOptimizer.h
include/nnc/IR/: CMakeLists.txt  NeuralNetworkDialect.h  NeuralNetworkOps.td
include/nnc/Transforms/: CMakeLists.txt  OperatorFusion.h
include/nnc/Utils/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  GraphOptimizer.cpp
lib/IR/: CMakeLists.txt  NeuralNetworkDialect.cpp
lib/Transforms/: CMakeLists.txt  FusionPasses.cpp
lib/Utils/: CMakeLists.txt
test/Analysis/: CMakeLists.txt
test/IR/: CMakeLists.txt  fusion_patterns.mlir
test/Transforms/: CMakeLists.txt  memory_layout.mlir
tools/: CMakeLists.txt  nnc-opt.cpp
